--- a/src/components/Movie/movie.css
+++ b/src/components/Movie/movie.css
@@ -1,9 +1,5 @@
 .image-list {
-    /* display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 10px;
-    grid-auto-rows: 400px;  
-    margin-bottom: 10px; */
+   
     display:flex;
     flex-wrap: wrap;
     
@@ -13,7 +9,17 @@
     margin:0;
     padding: 0;
 }
-
+.btn{
+   background-color:red;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top:2px;
+}
 
 .movie  {
     width: 300px;
